feat: 🎸 log error
